fixed title text position on mobile, pretty urls

--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -75,6 +75,7 @@ html, body {
 .my-name-container {
   position: absolute;
   top: 0px;
+  width: 100vw;
 }
 
 #intro-bg {
